<resources>
    <string name="app_name">Grocery Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo">DEMO</string>
    <string name="search_store">Search Store</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="groceries">Groceries</string>
    <string name="best_selling">Best Selling</string>
    <string name="add_to_basket">Add To Basket</string>
</resources>