<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/carrot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/demo"
                android:textSize="15sp" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:textColor="@color/black"
            android:background="@drawable/search_bg"
            android:backgroundTint="@color/grey"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:fontFamily="@font/gilroy_medium"
            android:hint="@string/search_store"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="#7C7C7C"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="2dp"
                app:sliderIndicatorRadius="1.9dp"
                app:sliderIndicatorSelectedColor="@color/green"
                app:sliderIndicatorUnselectedColor="#5A5A5A"
                app:sliderScrollTimeInSec="1" />

            <TextView
                android:id="@+id/tv_exclusive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slider"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/exclusive_offer"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slider"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exclusiveRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_exclusive"
                android:layout_marginTop="25dp"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_groceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exclusiveRecyclerView"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/groceries"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exclusiveRecyclerView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/groceriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_groceries"
                android:layout_marginTop="25dp"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_bestselling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceriesRecyclerView"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/best_selling"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceriesRecyclerView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestSellingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_bestselling"
                android:layout_marginTop="25dp"
                android:scrollbars="horizontal" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>